--- a/tomcat_src/Dockerfile
+++ b/tomcat_src/Dockerfile
@@ -3,8 +3,14 @@ FROM tomcat:9.0
 RUN apt-get update
 RUN apt-get -y upgrade
 
+# Copy Local's config file into Container
 COPY ./conf/server.xml /usr/local/tomcat/conf/server.xml
 COPY ./conf/web.xml /usr/local/tomcat/conf/web.xml
-COPY ./scripts/setup_container.sh /usr/local/tomcat/setup_container.sh
+
+# Replace webapps directory with local contents
+RUN rm -rf /usr/local/tomcat/webapps
+RUN mv /usr/local/tomcat/webapps.dist /usr/local/tomcat/webapps
+RUN rm -rf /usr/local/tomcat/webapps/ROOT/*
 COPY ./webcontents/* /usr/local/tomcat/webapps/ROOT/
 RUN /bin/sh /usr/local/tomcat/setup_container.sh
+
