Add various files and rewrite Dockerfile

--- a/apache_src/Dockerfile
+++ b/apache_src/Dockerfile
@@ -4,7 +4,8 @@ LABEL maintainer="cheesecat47@gmail.com"
 ENV DEBIAN_FRONTEND noninteractive
 
 # Copy Local's config file into Container
-COPY ./conf/httpd.conf /usr/local/apache2/conf/httpd.conf
+COPY ./conf/* /usr/local/apache2/conf/
+
 
 # Install Dependencies
 RUN apt-get update
@@ -21,3 +22,4 @@ RUN cd ./tomcat-connectors-1.2.48-src/native/ && \
     ./configure --with-apxs=/usr/local/apache2/bin/apxs && \
     make && \
     make install
+
