--- a/apache_src/conf/uriworkermap.properties
+++ b/apache_src/conf/uriworkermap.properties
@@ -22,7 +22,7 @@
 # worker "balancer" defined in workermap.properties.
 # The general syntax for this file is:
 # [URL]=[Worker name]
-
+/*.jsp=balancer
 /admin/*=balancer
 /manager/*=balancer
 /examples/*=balancer
