--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,21 @@
 version: "3"
 
 services: 
+
+    httpd:
+        build:
+            context: ./apache_src/
+            dockerfile: ./Dockerfile
+        image: myapache
+        container_name: apache-server
+        ports: 
+            - "80:80"
+        logging: 
+            driver: "json-file"
+            options: 
+                max-file: "10"
+                max-size: "10m"
+
     tomcat1:
         build:
             context: ./tomcat_src/
@@ -17,30 +32,13 @@ services:
                 max-size: "10m"
 
     tomcat2:
-        # build:
-        #     context: ./tomcat_src/
-        #     dockerfile: ./Dockerfile
         image: mytomcat
+        container_name: tomcat-server2
         depends_on:
             - tomcat1
-        container_name: tomcat-server2
-        ports: 
+        ports: # May be need to erase 
             - "8180:8080"
             - "8109:8009"  # for sync with apache
-        logging: 
-            driver: "json-file"
-            options: 
-                max-file: "10"
-                max-size: "10m"
-
-    httpd:
-        build:
-            context: ./apache_src/
-            dockerfile: ./Dockerfile
-        image: myapache
-        container_name: apache-server
-        ports: 
-            - "80:80"
         logging: 
             driver: "json-file"
             options: 
