[25] Fix dkcp file
Fix docker-compose file to run two tomcat containers using an image.
The commands doesn't look fancy, but it is a way to do.
You can also set dockerfile as ./Dockerfile, like used to do.

--- a/tomcat_src/Dockerfile
+++ b/tomcat_src/Dockerfile
@@ -1,8 +1,8 @@
 FROM tomcat:9.0
-ARG workername
-ARG clustermate
 
-# RUN apt-get update && \
+RUN cd /etc/apt && \
+    sed -i 's/deb.debian.org/ftp.kr.debian.org/g' sources.list && \
+    apt-get update
 #     apt-get -y upgrade
 
 # Copy Local's config file into Container
@@ -14,8 +14,4 @@ RUN rm -rf /usr/local/tomcat/webapps && \
     mv /usr/local/tomcat/webapps.dist /usr/local/tomcat/webapps && \
     rm -rf /usr/local/tomcat/webapps/ROOT/*
 COPY ./webcontents/* /usr/local/tomcat/webapps/ROOT/
-
-# Replace "WORKER_NAME" in server.xml with $workername
-RUN sed -i "s/WORKER_NAME/$workername/g" /usr/local/tomcat/conf/server.xml
-
 
