--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,12 +19,16 @@ services:
     tomcat1:
         build:
             context: ./tomcat_src/
-            dockerfile: ./Dockerfile
-            args:
-                workername: "node1"
-        image: mytomcat1
-        hostname: tomcat-server1
+            dockerfile: ./Dockerfile2
+        image: mytomcat
+        hostname: node1
         container_name: tomcat-server1
+        command: 
+            - bash
+            - -c
+            - |
+              sed -i "s/WORKER_NAME/node1/g" /usr/local/tomcat/conf/server.xml
+              /usr/local/tomcat/bin/catalina.sh run
         logging: 
             driver: "json-file"
             options: 
@@ -34,12 +38,16 @@ services:
     tomcat2:
         build:
             context: ./tomcat_src/
-            dockerfile: ./Dockerfile
-            args:
-                workername: "node2"
-        image: mytomcat2
-        hostname: tomcat-server2
+            dockerfile: ./Dockerfile2
+        image: mytomcat
+        hostname: node2
         container_name: tomcat-server2
+        command: 
+            - bash
+            - -c
+            - |
+              sed -i "s/WORKER_NAME/node2/g" /usr/local/tomcat/conf/server.xml
+              /usr/local/tomcat/bin/catalina.sh run
         logging: 
             driver: "json-file"
             options: 
