--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,14 +20,11 @@ services:
         build:
             context: ./tomcat_src/
             dockerfile: ./Dockerfile
-            args:
-                workername: "node1"
-        image: mytomcat1
+        environment:
+          - WORKER_NAME=node1
+        image: mytomcat
         hostname: tomcat-server1
         container_name: tomcat-server1
-        ports: 
-            # - "8080:8080"
-            - "8009:8009"  # for sync with apache
         logging: 
             driver: "json-file"
             options: 
@@ -38,14 +35,11 @@ services:
         build:
             context: ./tomcat_src/
             dockerfile: ./Dockerfile
-            args:
-                workername: "node2"
-        image: mytomcat2
+        environment:
+          - WORKER_NAME=node2
+        image: mytomcat
         hostname: tomcat-server2
         container_name: tomcat-server2
-        ports: # May be need to erase 
-            # - "8180:8080"
-            - "8109:8009"  # for sync with apache
         logging: 
             driver: "json-file"
             options: 
