--- a/apache_src/conf/workers.properties
+++ b/apache_src/conf/workers.properties
@@ -41,7 +41,7 @@ worker.jk-manager.type=status
 # with name "balancer"
 worker.list=balancer
 worker.balancer.type=lb
-worker.balancer.sticky_session=TRUE
+worker.balancer.sticky_session=true
 
 # error_escalation_time: seconds, default = recover_time/2 (=30)
 # Determines, how fast a detected error should switch from
