script write build_server script

--- a/example-project/WEB-INF/web.xml
+++ b/example-project/WEB-INF/web.xml
@@ -49,4 +49,4 @@
         <extension>wsdl</extension>
         <mime-type>text/xml</mime-type>
     </mime-mapping>
-</web-app>
+<distributable /></web-app>
